== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-10-21 Constellation Options Menu
<p>The Constellation Options menu has now been grouped together and is ordered alphabetically.</p>
<p>To reduce the overall number of options tabs the Application Font options can now be found under the Application tab, and the Anaglyphic Displays options can be found under the Graph tab.</p>
<p>These options can be found through Setup -&gt; Options -&gt; CONSTELLATION -&gt; Application or Graph.</p>

== 2022-10-19 Export from Analytic View
<p>The ability to export the results from running an analytic in the Analytic View has been added.</p>
<p>After running an analytic, an Export button appears at the top of the results table, allowing for the results to be exported to either a CSV or Excel file.</p>

== 2022-08-03 Layers View
<p>Layers View has had a complete UI rework and is now available under the Views menu.</p>
<p>Layers View allows you to add vertices and transactions to up to 32 layers by either using the right click context menu or defining a query.</p>
<p>The view allows for toggling of layers via a checkbox which links to subsets of graph elements.
This will either hide or show the subsets based on element visibility changes to reduce clutter when analysing large data sets.</p>

== 2022-07-28 Clear Button in Database Importer
<p>The "Import from Database" pane now has a clear button next to the query button. Clicking Clear will clear the results in the current run and will clear the query text</p>

== 2022-07-19 Import Graph File
<p>A new plugin "Import Graph File" has been added to the Import section of Data Access View. This allows you to import data from graph file types such as GML, GraphML, and Pajek.</p>

== 2022-06-17 Datetime Formatter