@@ -86,9 +86,8 @@ public abstract class ImportController<D> {
 
     // preference to show or hide all graph schema attributes
     private final Preferences importExportPrefs = NbPreferences.forModule(ImportExportPreferenceKeys.class);
-    
-    private static final Object LOCK = new Object();
 
+    private static final Object LOCK = new Object();
 
     protected ImportController() {
         showAllSchemaAttributes = false;
@@ -198,7 +197,7 @@ public abstract class ImportController<D> {
         try {
             synchronized (LOCK) {
                 updateAutoAddedAttributes(GraphElementType.VERTEX, autoAddedVertexAttributes, rg, showSchemaAttributes);
-                updateAutoAddedAttributes(GraphElementType.TRANSACTION, autoAddedTransactionAttributes, rg, showSchemaAttributes);               
+                updateAutoAddedAttributes(GraphElementType.TRANSACTION, autoAddedTransactionAttributes, rg, showSchemaAttributes);
             }
         } finally {
             rg.release();
@@ -310,9 +309,9 @@ public abstract class ImportController<D> {
         if (configurationPane != null) {
 
             synchronized (LOCK) {
-                displayedVertexAttributes = createDisplayedAttributes(autoAddedVertexAttributes, 
+                displayedVertexAttributes = createDisplayedAttributes(autoAddedVertexAttributes,
                         manuallyAddedVertexAttributes);
-                displayedTransactionAttributes = createDisplayedAttributes(autoAddedTransactionAttributes, 
+                displayedTransactionAttributes = createDisplayedAttributes(autoAddedTransactionAttributes,
                         manuallyAddedTransactionAttributes);
             }
 
@@ -384,7 +383,9 @@ public abstract class ImportController<D> {
      * A List&lt;ImportDefinition&gt; where each list element corresponds to a
      * RunPane tab.
      *
-     * @param isFilesIncludeHeadersEnabled
+     * @param isFilesIncludeHeadersEnabled When true will skip the first row and
+     * when false will include the first row
+     *
      * @return A List&lt;ImportDefinition&gt; where each list element
      * corresponds to a RunPane tab.
      */
@@ -443,12 +444,6 @@ public abstract class ImportController<D> {
         return currentData;
     }
 
-    public Attribute showNewAttributeDialog(final GraphElementType elementType) {
-        final NewAttributeDialog dialog = new NewAttributeDialog(importPane.getParentWindow(), elementType);
-        dialog.showAndWait();
-        return dialog.getAttribute();
-    }
-
     public Set<Integer> getKeys() {
         return Collections.unmodifiableSet(keys);
     }
@@ -464,6 +459,5 @@ public abstract class ImportController<D> {
     public void setSkipInvalidRows(final boolean skipInvalidRows) {
         this.skipInvalidRows = skipInvalidRows;
     }
-    
-    
+
 }
